[Tab Atom] Fix tab label alignment

--- a/SoloLearn/src/components/atoms/Tab/styles.scss
+++ b/SoloLearn/src/components/atoms/Tab/styles.scss
@@ -1,5 +1,4 @@
 .atom_tab {
 	max-width: 134px;
-	width: 100%;
 	min-width: unset;
 }
